# pilgrim-companion

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: llm.py  rag.py
data/kb/: chunks.json  index.faiss  metadata.json
docs/: RAG_DESIGN.md  liquid_glass.md
evaluation/: latest_results.json  questions.json
scripts/: audit_kb.py  build_index.py  evaluate_retrieval.py
static/: app.js  bg3d.js  glass3d.js  site.webmanifest  style.css
templates/: index.html
tests/: test_api_helpers.py  test_llm.py  test_rag.py
